# preconfirmation-gateway

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  DOCKER_OPTIMIZATION.md  Dockerfile  Dockerfile.helios  Dockerfile.optimized  HELIOS_SETUP.md  INTEGRATION_TESTING.md  Justfile  KEYSTORE_FIX_IMPLEMENTATION.md  KEYSTORE_INVESTIGATION.md  README.md  SYSTEM_OVERVIEW.md  Taskfile.yml  config.toml  docker-compose.helios.yml  docker-compose.yml  init.sql  test-keys.sh.example
.cargo-husky/: README.md
.sqlx/: query-156202d1db56770eed82fa42fdf9c3a1615c494eac3e11d05e2da83b8f6acf8b.json  query-18a2143a99d425da5b21fed058459b1d0868b4ac260ddf0323fcfe025222855f.json  query-36dde7fc063ebb83300b1c69a06c6ecede6547ab2f6140b504319de6f5d1013c.json  query-3ddd78aa46d1c9a2d2f7ed7e84a866068311e05dcb4fe301121eae2f0988f1ab.json  query-3f6dc9adb40e918b2511650d5b9978deb6dae86ef53cd1948252394b25dd2688.json  query-46d40643754e6a0d91fc4e8356793a44836abe82b5d067a28304952f6f6573fd.json  query-4e174e3477d871d60bd310bace8625cba831d27fbc6b133a970db199a2fc824c.json  query-4e28dc4af47fbd3d09e746512612f4a582f669f47be3e8005f4576595fb9c772.json  query-4f61fdfc6ef80332049ade8647ec09d7c42e77357751e3f4bba2cbd8d7b5bb8e.json  query-5d7af0d8b9ee44029b4765651a398ecfb3216fca4ad474994f148732fdc16ecd.json  query-6f07e8fabe9887400fbf59e58b9c33bd372ee55e3d6df1a6b80ca14db38af83c.json  query-7cb598aab98182635c1ec89d1043df8c365ce1b70dd70ea810a04e570b044501.json  query-7f93e876457ef9d176cd8c207613c5a9b23aadcc8f3273f23d1b7eab4405ff4b.json  (+14 more)
config/: gateway.docker.toml  proposer.config.toml  (+3 more)
src/: config.rs  (+5 more)
(+92 files in other folders)
