[package]
name = "preconfirmation-gateway"
version = "0.1.0"
edition = "2024"


[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
blst = "0.3.12"
config = "0.15.15"
deadpool-postgres = "0.14.1"
ethabi = "18.0"
ethers-core = "2.0"
futures = "0.3.31"
hex = "0.4"
http-body = "1.0.1"
http-body-util = "0.1.3"
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
jsonrpsee = { version = "0.26.0", features = ["http-client", "server", "client-core"] }
mockall = "0.13.1"
moka = { version = "0.12", features = ["future"] }
prometheus = "0.13"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
rlp = "0.5"
secp256k1 = { version = "0.27", features = ["recovery", "global-context", "rand"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
tokio-cron-scheduler = "0.9"
tokio-postgres = "0.7.13"
toml = "0.9.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
serial_test = "3.2"
tempfile = "3.8"
tokio-test = "0.4"
